# nlp_for_readability_term_paper

./: .env.example  .gitattributes  .gitignore  classifier.ipynb  explore.ipynb  main.py  models.json  pyproject.toml  write_dataset_csv.py
distrib/: dataset.json  dataset_test.csv  dataset_train.csv  results.json
paper/: .gitignore  cited.bib  custom.bib  paper.tex
paper/figs/: lldl_means.tex  nvr_topics.tex  wit_means.tex
paper/tables/: classifier_scores.tex  means.tex  metrics.tex
src/classifier/: classifier.py  dataset.py  device.py  evaluate.py  load_data.py  main.py  make_dataset.py  model.py  params_setup.py  preprocess.py  train.py  util.py
src/clear_corpus/: __init__.py  create_corpus_table.py
src/constants/: __init__.py  core.py  from_env.py
src/dalle/: __init__.py  dall_e.py
src/experiment/: __init__.py  entry.py  experiment.py  main.py  metrics.py  plot_results.py
src/gpt/: gpt3.py
src/make_dataset/: __init__.py  make_dataset.py  wiki.rest  write_dataset.py
src/simple_wiki/: __init__.py  to_sql.py
src/sql/: engine.py  models.py
src/type/: __init__.py  conll.py  test_set.py
src/util/: __init__.py  core.py  text.py
wiki-clean/: index.js  package.json
wiki-clean/src/: clean.js  getArticle.js
